@@ -2849,4 +2849,5 @@
 	* arch/arm/src/stm32_i2c.c:  Fix STM32 F2 I2C.  It is apparently bug-for-bug
 	  compatible with the F4 and needs the same work-around for the missing BTF
 	  signal that was needed for the F4.
+	* drivers/lcd/ssd1289.*:  Fix some of the initial register settings.
 
